[package]
name = "streaming-http-range-client"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A client for ergonomically streaming HTTP Range requests"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["stream"] }
futures-util = "0.3.28"
tokio-util = { version = "0.7.11", features = ["compat", "io"] }
async-trait = "0.1.73"
tokio = { version = "1.30.0", default-features = false }
async-stream = "0.3.5"
bytes = "1.5.0"

[dev-dependencies]
env_logger = "0.10.0"
tokio = { version = "1.30.0", features = ["full"] }
tokio-test = "0.4.3"
