[package]
name = "streaming-http-range-client"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A client for ergonomically streaming HTTP Range requests"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.19" , default-features = false }
reqwest = { version = "0.11.18", default-features = false, features = ["stream", "default-tls"] }
futures-util = { version ="0.3.28" , default-features = false }
tokio-util = { version = "0.7.11", default-features = false, features = ["io"] }
async-trait = { version = "0.1.73", default-features = false }
tokio = { version = "1.30.0", default-features = false }
async-stream = { version = "0.3.5", default-features = false}
bytes = { version = "1.5.0" , default-features = false }

[dev-dependencies]
env_logger = "0.10.0"
tokio = { version = "1.30.0", features = ["full"] }
tokio-test = "0.4.3"
